# freestdc

./: .gitignore  CMakeLists.txt  FreeSTDCConfig.cmake.in
cmake/: FreeSTDCConfig.cmake
include/: CMakeLists.txt  freestdc.h  freestdc.h.in
include/common/: CMakeLists.txt
src/: CMakeLists.txt  math.c
src/common/: CMakeLists.txt
src/i386/: CMakeLists.txt  string.asm
